--- a/view-log-backend/build.gradle
+++ b/view-log-backend/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.viewlog'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 description = 'ViewLog – A simple watchlist application'
 
 java {
@@ -38,4 +38,8 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+bootJar {
+    enabled = true
 }
